Bug 1812604 - time_t isn't 4 bytes on many BSDs r=RyanVM,gaston

Differential Revision: https://phabricator.services.mozilla.com/D177970